[FIX] After saving a page, can use edit plugin interface without the .rbox-title that overlaps
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@17907 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/transitions/2.0to3.0.css
+++ b/styles/transitions/2.0to3.0.css
@@ -27,6 +27,7 @@ They should be added to themes (possibly with tweaks) to make the theme v3.0 rea
 	color: black;
 	padding: 10px;
 	border: solid 2px black;
+	z-index: 10;
 }
 
 .icon_edit_section {
